--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-**/slurm_output/
+**/slurm_output*/
 **/saved_models/
-**/saved_weights/
+**/saved_weights*/
 **/__pycache__/
 **/.ipynb_checkpoints/
 **/.vscode/
